# final-stereo-assessment

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
screenshots/: HCI_HW04.unitypackage
src/: main.cpp  stereo_calibration.hpp  stereo_match.hpp
